# Cmake

cmakepractice/: CMakeLists.txt  main.cpp
cmakepractice/Department/: CMakeLists.txt  Department.cpp  Department.h
demo_cmakeQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
demo_cmakeQt/integration_cmake/: CMakeLists.txt  integration_cmake.cpp  integration_cmake.h
